--- a/index.html
+++ b/index.html
@@ -324,17 +324,37 @@
 							alt="" />
 					</div>
 					<div class="image fit">
-						<img src="images/New folder/62.png"
-							alt="" />
-					</div>
-					<!-- <div class="image fit">
-						<img src="images/New folder/png"
+						<img src="images/New folder/62.jpg"
 							alt="" />
 					</div>
 					<div class="image fit">
-						<img src="images/New folder/56.png"
+						<img src="images/New folder/63.jpg"
 							alt="" />
-					</div> -->
+					</div>
+					<div class="image fit">
+						<img src="images/New folder/64.png"
+							alt="" />
+					</div>
+
+					<!-- Column 15 (vertical, horizontal, vertical, horizontal) -->
+					<div class="image fit">
+						<img src="images/New folder/65.png"
+							alt="" />
+					</div>
+					<div class="image fit">
+						<img src="images/New folder/66.jpg"
+							alt="" />
+					</div>
+					<div class="image fit">
+						<img src="images/New folder/67.jpg"
+							alt="" />
+					</div>
+					<div class="image fit">
+						<img src="images/New folder/68.jpg"
+							alt="" />
+					</div>
+
+
 
 				</div>
 			</div>
