--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 			href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
 
-		<iframe width="0"
+		<!-- <iframe width="0"
 			height="0"
 			src="https://www.youtuberepeater.com/watch?v=1-xGerv5FOk#gsc.tab=0"
 			frameborder="0"
-			allowfullscreen></iframe>
+			allowfullscreen></iframe> -->
 
 	</head>
 
