--- a/index.html
+++ b/index.html
@@ -19,9 +19,23 @@
 			frameborder="0"
 			allowfullscreen></iframe> -->
 
+
+			<script type="text/javascript"> 
+				function display_c(){
+				var refresh=1000; // Refresh rate in millie seconds
+				mytime=setTimeout('display_ct()',refresh)
+				}
+				
+				function display_ct() {
+				var x = new Date()
+				document.getElementById('ct').innerHTML = x;
+				display_c();
+				 }
+				</script> 
+
 	</head>
 
-	<body>
+	<body onload=display_ct();>
 
 		<!-- Header -->
 		<header id="header">
@@ -370,7 +384,8 @@
 
 					<p> A Gorgeous Photo Gallery on the Web.<br>
 						<p>Today:
-							<script>
+							<span id='ct' ></span>
+							<!-- <script>
 								var mydate = new Date()
 								var year = mydate.getYear()
 								if (year < 1000)
@@ -386,7 +401,7 @@
 									"September", "October", "November", "December")
 								document.write("<small><font color='000000' face='Arial'><b>" + dayarray[day] + ", " + montharray[
 									month] + " " + daym + ", " + year + "</b></font></small>")
-							</script>
+							</script> -->
 							<br>
 							<p>Last updated- 25 June 2021</p>
 							<h4 style="color:black;">Attention<br><b style="color:rgb(255, 255, 255);">Please go to
