--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						class="animate__rubberBand">Hi! I'm Orchi.</h2>
 					<h3>This Is My Gorgeous Photo Gallery.</h3>
 					<h4 style="color:black;" >Please go to 'Desktop mode' for real view and wait a minute to load this page....</h4>
-					<h4 style="color:black;">If you want to remove this website please Contact.*
+					<h4 style="color:black;">This is <b style="color:white">A PRIVATE WEBPAGE</b>. If you want to remove this website please Contact.*
 					</h4>
 					<a href="#"
 						class="button big alt"><span>Let's Visit</span></a>
@@ -406,7 +406,7 @@
 							<p>Last updated- 25 June 2021</p>
 							<h4 style="color:black;">Attention<br><b style="color:rgb(255, 255, 255);">Please go to
 									'Desktop
-									mode' for real view.</b><br>If you want to remove this website please
+									mode' for real view.</b><br>This is <b style="color:white">A PRIVATE WEBPAGE</b>. If you want to remove this website please
 								Contact.</h4>
 
 
