--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
 			allowfullscreen></iframe> -->
 
 
-			<script type="text/javascript"> 
-				function display_c(){
-				var refresh=1000; // Refresh rate in millie seconds
-				mytime=setTimeout('display_ct()',refresh)
-				}
-				
-				function display_ct() {
+		<script type="text/javascript">
+			function display_c() {
+				var refresh = 1000; // Refresh rate in millie seconds
+				mytime = setTimeout('display_ct()', refresh)
+			}
+
+			function display_ct() {
 				var x = new Date()
 				document.getElementById('ct').innerHTML = x;
 				display_c();
-				 }
-				</script> 
+			}
+		</script>
 
 	</head>
 
@@ -44,13 +44,16 @@
 					<h2 style="color:black;"
 						class="animate__rubberBand">Hi! I'm Orchi.</h2>
 					<h3>This Is My Gorgeous Photo Gallery.</h3>
-					<h4 style="color:black;" >Please go to 'Desktop mode' for real view and wait a minute to load this page....</h4>
-					<h4 style="color:black;">New Photo Coming soon! This is <b style="color:white">A PRIVATE WEBPAGE</b>. If you want to remove this website please Contact.*
+					<!-- <h4 style="color:black;">Please go to 'Desktop mode' for real view and wait a minute to load this
+						page....</h4> -->
+					<h4 style="color:black;">New Photo Coming soon! <br>This is <b style="color:white">A PRIVATE
+							WEBPAGE</b>
+						<!-- If you want to remove this website please Contact.* -->
 					</h4>
 					<a href="#"
 						class="button big alt"><span>Let's Visit</span></a>
-					<a href="#"
-						class="button hidden"><span>Let's Visit</span></a>
+					<!-- <a href="#"
+						class="button hidden"><span>Let's Visit</span></a> -->
 				</div>
 
 			</div>
@@ -384,7 +387,7 @@
 
 					<p> A Gorgeous Photo Gallery on the Web.<br>
 						<p>Today:
-							<span id='ct' ></span>
+							<span id='ct'></span>
 							<!-- <script>
 								var mydate = new Date()
 								var year = mydate.getYear()
@@ -403,17 +406,48 @@
 									month] + " " + daym + ", " + year + "</b></font></small>")
 							</script> -->
 							<br>
-							<p>Last updated- 3 July 2021</p>
-							<h4 style="color:black;">Attention<br><b style="color:rgb(255, 255, 255);">Please go to
+							<p> Last updated- <script>
+									var mydate = new Date()
+									var year = mydate.getYear()
+									if (year < 1000)
+										year += 1900
+									var day = mydate.getDay()
+									var month = mydate.getMonth()
+									var daym = mydate.getDate()
+									if (daym < 10)
+										daym = "0" + daym
+									var dayarray = new Array("Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday",
+										"Saturday")
+									var montharray = new Array("January", "February", "March", "April", "May", "June", "July", "August",
+										"September", "October", "November", "December")
+									document.write("<small><font color='000000' face='Arial'><b>"+ montharray[
+									month] + " " + year + "</b></font></small>")
+								</script>
+							</p>
+							<h4 style="color:rgb(27, 27, 27);">Attention<br><b style="color:rgb(255, 255, 255);">Please go to
 									'Desktop
-									mode' for real view.</b><br>This is <b style="color:white">A PRIVATE WEBPAGE</b>. If you want to remove this website please
-								Contact.</h4>
+									mode' for real view.</b><br></h4>
 
 
 						</p>
 				</div>
 				<div class="copyright">
-					<h3>Follow me</h3>
+					<div id="sfcgguxs8k26qk1ganyfa8rr9cs6wjds17a"></div>
+					<script type="text/javascript"
+						src="https://counter2.stat.ovh/private/counter.js?
+
+c=gguxs8k26qk1ganyfa8rr9cs6wjds17a&down=async"
+						async></script><noscript><a href="https://www.freecounterstat.com"
+							title="hit counter"><img src="https://counter2.stat.ovh/private/freecounterstat.php?
+
+c=gguxs8k26qk1ganyfa8rr9cs6wjds17a"
+								border="0"
+								title="hit counter"
+								alt="hit 
+
+counter"></a></noscript>
+
+					<!-- <h3>Follow me</h3>
 					<ul class="icons">
 						<li><a href="#"
 								class="icon fa-twitter"><span class="label">Twitter</span></a></li>
@@ -423,7 +457,11 @@
 								class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="#"
 								class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-					</ul>
+					</ul> -->
+
+					<h4 style="color:black;">This is <b style="color:white">A PRIVATE WEBPAGE</b>. If
+						you want to remove this website please
+						Contact.</h4>
 
 					<p> Have a Good <script>
 							var mydate = new Date()
@@ -442,7 +480,7 @@
 							document.write("<small><font color='000000' face='Arial'><b>" + dayarray[day] + "</b></font></small>")
 						</script><br>
 						Image Owner: <a style="text-decoration:none"
-							href="#">&copy;Orchi</a> - Since:<script>
+							href="#">&copy;Orchi</a> - Since:2021-<script>
 							document.write(new Date().getFullYear());
 						</script>
 					</p>
