--- a/index.html
+++ b/index.html
@@ -432,20 +432,7 @@
 						</p>
 				</div>
 				<div class="copyright">
-					<div id="sfcgguxs8k26qk1ganyfa8rr9cs6wjds17a"></div>
-					<script type="text/javascript"
-						src="https://counter2.stat.ovh/private/counter.js?
-
-c=gguxs8k26qk1ganyfa8rr9cs6wjds17a&down=async"
-						async></script><noscript><a href="https://www.freecounterstat.com"
-							title="hit counter"><img src="https://counter2.stat.ovh/private/freecounterstat.php?
-
-c=gguxs8k26qk1ganyfa8rr9cs6wjds17a"
-								border="0"
-								title="hit counter"
-								alt="hit 
-
-counter"></a></noscript>
+					<a href="https://www.freecounterstat.com" title="hit counter"><img src="https://counter2.stat.ovh/private/freecounterstat.php?c=gguxs8k26qk1ganyfa8rr9cs6wjds17a" border="0" title="hit counter" alt="hit counter"></a>
 
 					<!-- <h3>Follow me</h3>
 					<ul class="icons">
