--- a/index.html
+++ b/index.html
@@ -353,24 +353,133 @@
 							alt="" />
 					</div>
 
-					<!-- Column 15 (vertical, horizontal, vertical, horizontal) -->
+					<!-- Column 17 (vertical, horizontal, vertical, horizontal) -->
 					<div class="image fit">
 						<img src="images/New folder/65.png"
 							alt="" />
 					</div>
 					<div class="image fit">
-						<img src="images/New folder/66.jpg"
+						<img src="images/New folder/66.png"
 							alt="" />
 					</div>
 					<div class="image fit">
-						<img src="images/New folder/67.jpg"
+						<img src="images/New folder/67.png"
 							alt="" />
 					</div>
 					<div class="image fit">
-						<img src="images/New folder/68.jpg"
+						<img src="images/New folder/68.png"
 							alt="" />
 					</div>
 
+					<!-- Column 18 (vertical, horizontal, vertical, horizontal) -->
+					<div class="image fit">
+						<img src="images/New folder/69.png"
+							alt="" />
+					</div>
+					<div class="image fit">
+						<img src="images/New folder/70.png"
+							alt="" />
+					</div>
+					<div class="image fit">
+						<img src="images/New folder/71.png"
+							alt="" />
+					</div>
+					<div class="image fit">
+						<img src="images/New folder/72.png"
+							alt="" />
+					</div>
+
+					<!-- Column 19 (vertical, horizontal, vertical, horizontal) -->
+					<div class="image fit">
+						<img src="images/New folder/73.png"
+							alt="" />
+					</div>
+					<div class="image fit">
+						<img src="images/New folder/74.png"
+							alt="" />
+					</div>
+					<div class="image fit">
+						<img src="images/New folder/75.png"
+							alt="" />
+					</div>
+					<div class="image fit">
+						<img src="images/New folder/76.png"
+							alt="" />
+					</div>
+
+					<!-- Column 20 (vertical, horizontal, vertical, horizontal) -->
+					<div class="image fit">
+						<img src="images/New folder/77.png"
+							alt="" />
+					</div>
+					<div class="image fit">
+						<img src="images/New folder/78.png"
+							alt="" />
+					</div>
+					<div class="image fit">
+						<img src="images/New folder/79.png"
+							alt="" />
+					</div>
+					<div class="image fit">
+						<img src="images/New folder/80.png"
+							alt="" />
+					</div>
+
+					<!-- Column 21 (vertical, horizontal, vertical, horizontal) -->
+					<div class="image fit">
+						<img src="images/New folder/81.png"
+							alt="" />
+					</div>
+					<div class="image fit">
+						<img src="images/New folder/82.png"
+							alt="" />
+					</div>
+					<div class="image fit">
+						<img src="images/New folder/83.png"
+							alt="" />
+					</div>
+					<div class="image fit">
+						<img src="images/New folder/84.png"
+							alt="" />
+					</div>
+
+					<!-- Column 22 (vertical, horizontal, vertical, horizontal) -->
+					<div class="image fit">
+						<img src="images/New folder/85.png"
+							alt="" />
+					</div>
+					<div class="image fit">
+						<img src="images/New folder/86.png"
+							alt="" />
+					</div>
+					<div class="image fit">
+						<img src="images/New folder/87.png"
+							alt="" />
+					</div>
+					<div class="image fit">
+						<img src="images/New folder/88.png"
+							alt="" />
+					</div>
+
+					<!-- Column 23 (vertical, horizontal, vertical, horizontal) -->
+					<div class="image fit">
+						<img src="images/New folder/89.png"
+							alt="" />
+					</div>
+					<div class="image fit">
+						<img src="images/New folder/90.png"
+							alt="" />
+					</div>
+					<div class="image fit">
+						<img src="images/New folder/91.png"
+							alt="" />
+					</div>
+					<div class="image fit">
+						<img src="images/New folder/92.png"
+							alt="" />
+					</div>
+
+					
 
 
 				</div>
