--- a/index.html
+++ b/index.html
@@ -479,6 +479,24 @@
 							alt="" />
 					</div>
 
+					<!-- Column 24 (vertical, horizontal, vertical, horizontal) -->
+					<div class="image fit">
+						<img src="images/New folder/93.png"
+							alt="" />
+					</div>
+					<div class="image fit">
+						<img src="images/New folder/94.png"
+							alt="" />
+					</div>
+					<div class="image fit">
+						<img src="images/New folder/95.png"
+							alt="" />
+					</div>
+					<div class="image fit">
+						<img src="images/New folder/96.png"
+							alt="" />
+					</div>
+
 					
 
 
