--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
 
 					<h4 style="color:black;">This is <b style="color:white">A PRIVATE WEBPAGE</b>. If
 						you want to remove this website please
-						Contact.</h4>
+						<a href="">Contact</a></h4>
 
 					<p> Have a Good <script>
 							var mydate = new Date()
